[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["BonesetterB <122158929+BonesetterB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pydantic = "^2.1.1"
asyncpg = "^0.28.0"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
